@@ -5,6 +5,9 @@ Revision history for DBIx::Class
           resolution codepath, restoring exotic uses of inflate_result
           http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011876.html
 
+    * Misc
+        - Remove warning about potential side effects of RT#79576 (scheduled)
+
 0.082810 2014-10-25 13:58 (UTC)
     * Fixes
         - Fix incorrect collapsing-parser source being generated in the
